--- a/fakebusterapp/app/templates/index.html
+++ b/fakebusterapp/app/templates/index.html
@@ -16,7 +16,7 @@
     <p>Using this fake buster you can easily classify if you have got fake news.</p>
   </div>
   <form action="{{ url_for('predict')}}"method="post">
-    <h2>Enter your message here</h2>
+    <h2>Enter the article text here</h2>
     <div class="form-group">
       <textarea class="form-control" rows="5" id="comment" name="comment"></textarea>
     </div>
