--- a/fakebusterapp/app/templates/index.html
+++ b/fakebusterapp/app/templates/index.html
@@ -26,7 +26,7 @@
   </form>
   <div>
     <h3>You Entered</h3>
-    <h3>{{ usertext }}</h3>
+    <p>{{ usertext }}</p>
   </div>
   <div>
     <h3>{{ result }}</h3>
