--- a/fakebusterapp/app/templates/index.html
+++ b/fakebusterapp/app/templates/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron text-center">
     <h1>Fake Buster</h1>
     <p>Using this fake buster you can easily classify if you have got fake news.</p>
   </div>
