Add image to jumbotron

--- a/fakebusterapp/app/templates/index.html
+++ b/fakebusterapp/app/templates/index.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
       .jumbotron {
-      background-image: url("../img/jumbo.jpg");
+      background-image: url("../static/img/jumbo.jpg");
       background-size: cover;
     }
   </style>
