Add image to jumbotron

--- a/fakebusterapp/app/templates/index.html
+++ b/fakebusterapp/app/templates/index.html
@@ -20,7 +20,7 @@
 <div class="container">
   <div class="jumbotron text-center">
     <h1>Fake Buster</h1>
-    <p>Using this rate buster you can easily classify if you have got fake news.</p>
+    <p>Using this fake buster you can easily classify if you have got fake news.</p>
   </div>
   <form action="{{ url_for('predict')}}"method="post">
     <h2>Enter the article text here</h2>
